# TurboQuant-H

./: README.md  pyproject.toml  requirements.txt  turboquant_h_smollm_benchmark.py
docs/: README.md  TurboQuant-H_paper_draft.md  compression-guide.md  project-map.md  runtime-flow.md
src/turboquant_h/: __init__.py  benchmark.py  cli.py  config.py  reporting.py
src/turboquant_h/compression/: __init__.py  attention.py  cache.py  common.py  correction.py  packing.py  quantization.py  rotation.py
tests/: __init__.py  test_benchmark.py  test_cache.py  test_config.py  test_packing.py
